--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -1,7 +1,7 @@
 .label {
   display: flex;
   flex-direction: column;
-  outline: 1px solid red;
+  /* outline: 1px solid red; */
   justify-content: space-between;
   text-align: left;
 }
@@ -16,6 +16,14 @@
   outline: none;
   width: 100%;
   background: rgba(40, 43, 87, 0.3);
+}
+
+.input:hover,
+.input:focus {
+  outline: none;
+  cursor: pointer;
+  background: rgba(40, 43, 87, 0.7);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .input::placeholder {
