--- a/src/components/TextArea/TextArea.module.css
+++ b/src/components/TextArea/TextArea.module.css
@@ -1,7 +1,7 @@
 .label {
   display: flex;
   flex-direction: column;
-  outline: 1px solid red;
+  /* outline: 1px solid red; */
   justify-content: space-between;
   text-align: left;
 }
@@ -18,6 +18,14 @@
   background: rgba(40, 43, 87, 0.3);
 }
 
+.textArea:hover,
+.textArea:focus {
+  cursor: pointer;
+  background: rgba(40, 43, 87, 0.7);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 textarea::placeholder {
+  color: #808080;
   font-size: 16px;
 }
