--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -1,14 +1,13 @@
 .label {
   display: flex;
   flex-direction: column;
-  /* outline: 1px solid red; */
   justify-content: space-between;
   text-align: left;
 }
 
 .input {
   box-sizing: border-box;
-  margin: 10px auto;
+  margin: 15px 0 auto;
   padding: 17px 20px;
   border-radius: 30px 0px;
   border: 1px solid var(--color-gr);
