--- a/src/components/TextArea/TextArea.module.css
+++ b/src/components/TextArea/TextArea.module.css
@@ -8,7 +8,7 @@
 
 .textArea {
   box-sizing: border-box;
-  margin: 10px auto;
+  margin: 15px 0 auto;
   padding: 17px 20px;
   border-radius: 30px 0px;
   border: 1px solid var(--color-gr);
