Fixed Date placeholder

--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -28,3 +28,8 @@
 .input::placeholder {
   font-size: 16px;
 }
+
+.input[type="date"]:invalid::-webkit-datetime-edit {
+  color: gray;
+  font-size: 16px;
+}
