--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -30,7 +30,20 @@
   font-size: 16px;
 }
 
-.input[type="date"]:invalid::-webkit-datetime-edit {
-  color: gray;
+input[type="date"]::-webkit-calendar-picker-indicator {
+  cursor: pointer;
+  border-radius: 4px;
+  margin-right: 2px;
+  opacity: 0.6;
+  filter: invert(0.8);
+  font-size: 16px;
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator:hover {
+  opacity: 1;
+}
+
+input::-webkit-datetime-edit {
+  color: grey;
   font-size: 16px;
 }
