--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -9,6 +9,7 @@
   font-size: 14px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .button:hover,
 .button:focus {
   outline: none;
@@ -16,4 +17,14 @@
   background-color: var(--accent-color);
   color: var(--color-gr);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.disabled {
+  height: 50px;
+  width: 48%;
+  border-radius: 6px;
+  border: none;
+  background-color: rgba(111, 110, 110) 0.6;
+  color: var(--color-gr);
+  cursor: not-allowed;
 }
