--- a/src/components/Form/TextArea/TextArea.module.css
+++ b/src/components/Form/TextArea/TextArea.module.css
@@ -1,7 +1,6 @@
 .label {
   display: flex;
   flex-direction: column;
-  /* outline: 1px solid red; */
   justify-content: space-between;
   text-align: left;
   margin-top: 10px;
@@ -29,4 +28,12 @@
 textarea::placeholder {
   color: #808080;
   font-size: 16px;
+}
+
+.message {
+  margin: 5px 0;
+  color: #808080;
+  text-align: left;
+  font-size: 14px;
+  font-weight: 300;
 }
