--- a/src/components/common/Button/Button.module.css
+++ b/src/components/common/Button/Button.module.css
@@ -25,6 +25,6 @@
   border-radius: 6px;
   border: none;
   background-color: rgba(111, 110, 110) 0.6;
-  color: var(--color-gr);
+  color: rgba(255, 255, 255, 0.3);
   cursor: not-allowed;
 }
