--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -1,3 +1,30 @@
+.container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.wrap {
+  width: 45%;
+  display: flex;
+}
+
+.contentWrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.image {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.description {
+  line-height: 170%;
+  font-weight: 100;
+}
+
 .form {
   width: 50%;
 }
